# 15418-project

./: .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt  driver_config.cpp  driver_config.hpp  main.cpp  twitter_remove_query.cpp
config/: example.toml
config/benchmark/: tt1_default.toml  tt1_sharemem.toml  tt2_default.toml  tt3_default.toml  tt4_default.toml
dataset/: twitter_sample_large_record.json
eval/: parse_gpjson_log.py  pyproject.toml
eval/run/: clean_run.sh
eval/summarize/: main.py  pyproject.toml
eval/summarize/log_parser/: __init__.py  cli.py  dataframes.py  formatting.py  models.py  parser.py  report.py  summaries.py
include/gpjson/: engine.hpp  file_loader.hpp  index_creator.hpp  jsonpath_lexer.hpp  jsonpath_parser.hpp  query_compiler.hpp  query_executor.hpp  run_context.hpp  types.hpp
include/gpjson/cuda/: cuda.hpp  error.hpp
include/gpjson/error/: common.hpp  error.hpp
include/gpjson/file/: error.hpp  file.hpp  file_reader.hpp
include/gpjson/index/: error.hpp  index.hpp  index_builder.hpp
include/gpjson/index/kernels/: fuse.cuh  orig.cuh  sharemem.cuh
include/gpjson/log/: log.hpp
include/gpjson/profiler/: profiler.hpp
include/gpjson/query/: error.hpp  ir_input_buffer.hpp  query.hpp  query_compiler.hpp  query_executor.hpp
include/gpjson/query/kernels/: optimized.hpp  orig.hpp
src/gpjson/: engine.cpp
src/gpjson/cuda/: cuda.cpp
src/gpjson/file/: file.cpp  file_reader.cpp
src/gpjson/index/: fuse_index_builder.cu  index.cpp  index_builder.cpp  orig_index_builder.cu  sharemem_index_builder.cu
src/gpjson/index/kernels/fuse/: escape-carry-index.cu  escape-carry-quote-carry-index.cu  quote-carry-index.cu  string-index.cu
src/gpjson/index/kernels/orig/: char-sum-post-scan.cu  char-sum-pre-scan.cu  char-sum-rebase.cu  combined-escape-carry-newline-count-index.cu  combined-escape-newline-index.cu  int-sum-post-scan.cu  int-sum-pre-scan.cu  int-sum-rebase.cu  leveled-bitmaps-carry-index.cu  leveled-bitmaps-index.cu  quote-index.cu  string-index.cu  xor-post-scan.cu  xor-pre-scan.cu  xor-rebase.cu
src/gpjson/index/kernels/orig/uncombined/: escape-carry-index.cu  escape-index.cu  newline-count-index.cu  newline-index.cu
src/gpjson/index/kernels/sharemem/: char-sum-post-scan.cu  char-sum-pre-scan.cu  char-sum-rebase.cu  combined-escape-carry-newline-count-index.cu  combined-escape-newline-index.cu  int-sum-post-scan.cu  int-sum-pre-scan.cu  int-sum-rebase.cu  leveled-bitmaps-carry-index.cu  leveled-bitmaps-index.cu  packed-bytes.cuh  quote-index.cu  string-index.cu  xor-post-scan.cu  xor-pre-scan.cu  xor-rebase.cu
src/gpjson/index/kernels/sharemem/uncombined/: escape-carry-index.cu  escape-index.cu  newline-count-index.cu  newline-index.cu  per-tile-newline-count-index.cu.disabled  per-tile-newline-index.cu.disabled  per-tile-newline-index.cu.exp.disabled
src/gpjson/profiler/: profiler.cpp
src/gpjson/query/: ir_input_buffer.cpp  query.cpp  query_compiler.cpp  query_executor.cpp
src/gpjson/query/kernels/optimized/: query.cu
src/gpjson/query/kernels/orig/: query.cu  query_executor.cu  query_executor_host.cpp  query_executor_host.cu
tests/: CMakeLists.txt  engine_test.cpp  test_cuda.cpp  test_gpjson_dummy.cpp
tests/app/: driver_config_test.cpp
tests/benchmark/: benchmark_large_output_test.cpp  benchmark_output_test.cpp  benchmark_output_test_utils.hpp  benchmark_remove_output_test.cpp
tests/cuda/: test_cuda.cpp
tests/file/: CMakeLists.txt  file_reader_test.cpp  file_reader_test_utils.hpp
tests/index/: index_test_utils.hpp  leveled_bitmap_index_test.cpp  newline_index_test.cpp  string_index_test.cpp  test_index_builder.cpp
tests/query/: CMakeLists.txt  query_compiler_test.cpp  query_executor_test.cpp
tests/utils/: utils.hpp
